# central-bank-statements

./: .gitignore  CLAUDE.md  README.md  communications_boc.csv  communications_boe.csv  communications_riksbank.csv  communications_snb.csv  hello.py  pyproject.toml  release_calendar.txt  requirements.txt  scrape.py  update_release_calendar.py
.github/workflows/: backfill.yml  main.yml  scheduled.yml  update_calendar.yml
data/: manifest.csv
data/boe/minutes/: 20240201.html  20240201.json  20240301.html  20240301.json  20240501.html  20240501.json  20240601.html  20240601.json  20240801.html  20240801.json  20240901.html  20240901.json  20241101.html  20241101.json  20241201.html  20241201.json  20250201.html  20250201.json  20250301.html  20250301.json  20250501.html  20250501.json  20250601.html  20250601.json  20250801.html  20250801.json  20250901.html  20250901.json  20251101.html  20251101.json  20251201.html  20251201.json  20260201.html  20260201.json  20260301.html  20260301.json  20260601.html  20260601.json  20260901.html  20260901.json  (+4 more)
data/ecb/accounts/: 20190221.html  20190221.json  20190404.html  20190404.json  20190523.html  20190523.json  20190711.html  20190711.json  20190822.html  20190822.json  20191010.html  20191010.json  20191121.html  20191121.json  20200116.html  20200116.json  20200220.html  20200220.json  20200409.html  20200409.json  20200522.html  (+97 more)
pipeline/: manifest.py  normalize.py  run.py
schedules/: meeting_calendar.json
scrapers/: __init__.py  base.py  boc.py  boe.py  boj.py  ecb.py  fed.py  rba.py  riksbank.py  snb.py
(+972 files in other folders)
